# discrete-fracture-network

./: .coverage  .coveragerc  .gitignore  .travis.yml  Fluid.py  FractureNetworkFlow.py  FractureNetworkThermal.py  LICENSE  Makefile  README.rst  __init__.py  aperture_uncertainty_network_1.py  aperture_uncertainty_network_2.py  codecov.yaml  dfn.py  example.py  example_flow.py  example_thermal_1.py  example_thermal_2.py  flow_split.py  pyproject.toml  requirements.txt  setup.py  thermal_performance_network_1.py  tox.ini
.github/workflows/: ci.yaml
dfn/: Fluid.py  FractureNetwork.py  FractureNetworkFlow.py  FractureNetworkThermal.py  TODO  __init__.py  base.py  read_json.py
dfn/tests/: test_Fluid.py  test_FractureFlow.py  test_FractureFlowNetwork.py  test_FractureNetwork.py  test_FractureNetworkFlow.py  test_FractureNetworkThermal.py  test_fluids.py
dfn/tests/data/: network_data.json
examples/: aperture_uncertainty_network_1.py  aperture_uncertainty_network_2.py  flow_split.py  thermal_performance_network_1.py  thermal_performance_network_2.py
tests/: test_Base.py  test_Fluid.py  test_FractureNetwork.py  test_FractureNetworkFlow.py  test_FractureNetworkThermal.py  test_read_from_json.py
tests/data/: flow_data.json  network_thermal_data.json
