[tool.poetry]
name = "dfn"
version = "1.1.2"
description = "An analytical thermohydraulic model for discretely fractured geothermal reservoirs"
authors = ["Don B. Fox <dfox09@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
importlib-metadata = {version = "<4.3", python = "3.7"}
networkx = ">=2.2"
scipy = ">=1.1.0"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
tox = "3.25"
tox-gh-actions = "2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
